--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,14 +1,16 @@
-version: '3.9'
-
 services:
   dm-payments:
     build:
       context: ../
       dockerfile: .docker/Dockerfile
     command: bash -c "poetry run python src/main.py"
-    container_name: dm-water-consumption
+    container_name: dm-payments
     volumes:
       - .:/dm-payments
+    env_file:
+      - /.env
+    environment:
+      - DATABASE_URL=${SQLALCHEMY_DATABASE_URL}
     ports:
       - "8400:8400"
     depends_on:
@@ -16,18 +18,18 @@ services:
         condition: service_healthy
 
   db-dm-payments:
-    container_name: db-dm-payments
+    container_name: db-payments
     image: postgres:15
     volumes:
       - ./data/db-dm-payments:/var/lib/postgresql/data
     env_file:
-      - ../.env
+      - /.env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5432:5432"
+      - "5435:5432"
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "${POSTGRES_USER}" ]
       interval: 5s
