--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = {extras = ["all"], version = "^0.110.2"}
 uvicorn = "^0.29.0"
 stripe = "^9.3.0"
 sqlalchemy = "^2.0.29"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
