--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
-  dm-payments:
+  app-dm-payments:
+    networks:
+      - dm-payments
     build:
       context: ../
       dockerfile: .docker/Dockerfile
@@ -18,6 +20,8 @@ services:
         condition: service_healthy
 
   db-dm-payments:
+    networks:
+      - dm-payments
     container_name: db-payments
     image: postgres:15
     volumes:
@@ -35,3 +39,6 @@ services:
       interval: 5s
       timeout: 30s
       retries: 6
+
+networks:
+  dm-payments:
