--- a/.github/workflows/dm-payments-ci.yml
+++ b/.github/workflows/dm-payments-ci.yml
@@ -46,6 +46,6 @@ jobs:
         SQLALCHEMY_DATABASE_URL: ${{ secrets.SQLALCHEMY_DATABASE_URL }}
         POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
         POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
-        POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-        POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-        POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+        POSTGRES_DB: dm-payments
+        POSTGRES_PASSWORD: 48bc27agh!
+        POSTGRES_USER: postgres
