--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ uvicorn = "^0.29.0"
 stripe = "^9.3.0"
 sqlalchemy = "^2.0.29"
 psycopg2 = "^2.9.9"
+pytest = "^8.2.1"
+pytest-asyncio = "^0.23.7"
 
 
 [build-system]
