--- a/.github/workflows/dm-payments-ci.yml
+++ b/.github/workflows/dm-payments-ci.yml
@@ -43,9 +43,9 @@ jobs:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
         STRIPE_WEBHOOK_KEY: ${{ secrets.STRIPE_WEBHOOK_KEY }}
-        SQLALCHEMY_DATABASE_URL: postgresql://postgres:48bc27agh!@localhost:5432/dm-payments
-        POSTGRES_PORT: 5432
-        POSTGRES_HOST: localhost
-        POSTGRES_DB: dm-payments
-        POSTGRES_PASSWORD: 48bc27agh!
-        POSTGRES_USER: postgres
+        SQLALCHEMY_DATABASE_URL: ${{ secrets.SQLALCHEMY_DATABASE_URL }}
+        POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+        POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+        POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+        POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+        POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
